Add api call to analytics
