# services/analytics-svc/api/swagger/swagger.yaml
@@ -972,6 +972,33 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/Error"
+  /kaplan-meier:
+    x-swagger-router-controller: graph
+    get:
+      description: Gets km graph data generated by data flow if available
+      operationId: getKmData
+      produces:
+        - application/json
+      parameters:
+        - name: flowRunId
+          in: query
+          description: ID of flow run used to generated the graph data
+          required: true
+          type: string
+        - name: studyId
+          in: query
+          description: ID of study
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: string
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/Error"
   /data-characterization/{databaseName}/{vocabSchema}/{resultsSchema}/{sourceKey}:
     x-swagger-router-controller: dataCharacterization
     get:
